--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://github.com/revature-react-5-4-20-classroom/project-0-kruti4#readme",
   "dependencies": {
-    "@types/express": "^4.17.6",
     "express": "^4.17.1",
-    "nodemon": "^2.0.3",
-    "ts-node": "^8.10.1"
+    "express-session": "^1.17.1",
+    "pg": "^8.2.1"
   },
   "devDependencies": {
+    "@types/express": "^4.17.6",
+    "@types/express-session": "^1.17.0",
+    "@types/pg": "^7.14.3",
+    "nodemon": "^2.0.3",
+    "ts-node": "^8.10.1",
     "typescript": "^3.8.3"
   }
 }
